--- a/index.html
+++ b/index.html
@@ -8,8 +8,11 @@
   <title>FakeStore</title>
   <link rel="stylesheet" href="./css/style.css" />
   <!-- Latest compiled and minified CSS -->
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
-    integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous" />
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
+  <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
+    integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous" /> -->
+    <!-- fontawesome link  -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
   <!-- google Montserrat  font  -->
   <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -17,24 +20,33 @@
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500&display=swap" rel="stylesheet" />
 </head>
 
-<body>
-  <header></header>
-  <main class="main">
-    <div class="search-field">
-      <div class="search-box">
-        <input id="input-field" class="search-field" type="text" />
-        <button type="button" class="btn btn-primary search-button" data-toggle="button" aria-pressed="false"
-          autocomplete="off" id="search-btn" onclick="loadProducts()">
-          Search
-        </button>
-      </div>
+<body class="bg-light">
+  
+  <main class="main container">
+    <!-- <div class="search-f"> -->
+      <header>
+      <div class="head">
+      <div class="container-fluid row-cols-2 d-flex">
+        <div class="col-2">
+            <img src="image/logo.png" alt="logo" class="img-fluid w-75">
+        </div>
+        <div class="input-group mb-3 col-10 w-75 justify-content-end">
+            <input id="search-input" type="text" class="w-50 bg-light" placeholder="Search Product" aria-label="Recipient's username" aria-describedby="basic-addon2">
+            <span id="search-btn" onclick="getBookApi()" class="input-group-text bg-light" id="basic-addon2">
+                <i class="fas fa-search"></i>
+            </span>
+        </div>
+        </div>
     </div>
+  </header>
+
     <div class="row">
       <div class="col-md-9 col-lg-9 col-sm-7">
-        <div id="all-products" class=""></div>
+        <!-- <div id="all-products" class=""></div> -->
+        <div id="all-products" class="row row-cols-1 row-cols-md-3 g-4"></div>
       </div>
       <div class="col-md-3 col-lg-3 col-sm-5 cart-main">
-        <div class="cart" id="my-cart">
+        <div class="cart bg-light" id="my-cart">
           <table class="table">
             <thead>
               <h1>My-Cart</h1>
@@ -78,7 +90,7 @@
             </tbody>
           </table>
           <div class="parces text-center">
-            <button class="btn btn-primary text-center">Buy Now</button>
+            <button class="btn btn-info fw-bold text-white text-center">Buy Now</button>
           </div>
         </div>
       </div>
