--- a/index.html
+++ b/index.html
@@ -5,12 +5,11 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>FakeStore</title>
+  <title>Online Store</title>
   <link rel="stylesheet" href="./css/style.css" />
   <!-- Latest compiled and minified CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
-  <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
-    integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous" /> -->
+  <link rel="shortcut icon" href="image/fab-Icon.png" type="image/x-icon">
     <!-- fontawesome link  -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
@@ -23,7 +22,6 @@
 <body class="bg-light">
   
   <main class="main container">
-    <!-- <div class="search-f"> -->
       <header>
       <div class="head">
       <div class="container-fluid row-cols-2 d-flex">
@@ -31,7 +29,7 @@
             <img src="image/logo.png" alt="logo" class="img-fluid w-75">
         </div>
         <div class="input-group mb-3 col-10 w-75 justify-content-end">
-            <input id="search-input" type="text" class="w-50 bg-light" placeholder="Search Product" aria-label="Recipient's username" aria-describedby="basic-addon2">
+            <input id="search-input" type="text" class="w-50 bg-light" placeholder="Search What you buy now" aria-label="Recipient's username" aria-describedby="basic-addon2">
             <span id="search-btn" onclick="getBookApi()" class="input-group-text bg-light" id="basic-addon2">
                 <i class="fas fa-search"></i>
             </span>
